# podcastkit

./: .gitignore  LICENSE  README.md  generate_edge.py  generate_kokoro.py  pyproject.toml  requirements-kokoro.txt
.github/workflows/: ci.yml
agreeable_ep1/: assemble.py  generate.py  script.json
agreeable_ep2/: generate.py  screenplay.md  script.json
agreeable_ep3/: generate.py  screenplay.md  script.json
agreeable_ep4/: generate.py  screenplay.md  script.json
agreeable_ep5/: generate.py  screenplay.md  script.json
agreeable_ep6/: generate.py  screenplay.md  script.json
docs/: AGREEABLE_episode1_recording_script.docx  AGREEABLE_series_bible.docx
src/podcastkit/: _errors.py  _exit_codes.py  _output.py  _script.py  assemble.py  cli.py  config.py  scaffold.py
src/podcastkit/backends/: __init__.py  _util.py  base.py  chatterbox.py  elevenlabs.py  kokoro.py  openai_tts.py
src/podcastkit/prompts/: __init__.py  bible.py  script.py
src/podcastkit/sfx/: __init__.py  _audiocraft.py
src/podcastkit/templates/: episode.yaml  script.json
src/podcastkit/writers/: __init__.py  base.py  claude.py  ollama.py  openai_writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_output.py  test_script.py
