[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcastkit"
version = "0.1.0"
description = "CLI for producing audio dramas and podcasts with TTS + ffmpeg mixing"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
audiocraft = ["transformers>=4.40", "torch>=2.0"]
chatterbox = ["chatterbox-tts>=0.1", "torch>=2.0", "numpy>=1.24"]
claude = ["anthropic>=0.25"]
kokoro = ["kokoro>=0.7", "numpy>=1.24"]
openai = ["openai>=1.30"]

[project.scripts]
podcastkit = "podcastkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/podcastkit"]
